--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^7.15.0",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/vuetify": "^1.12.3",
     "core-js": "^3.25.3",
+    "express": "^4.18.1",
     "highcharts": "^10.2.0",
     "nuxt": "^2.15.8",
     "nuxt-highcharts": "^2.0.4",
+    "request": "^2.88.2",
     "v-money": "^0.8.1",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
@@ -21,7 +25,5 @@
     "vuetify": "^2.6.10"
   },
   "devDependencies": {
-    "@nuxtjs/vuetify": "^1.12.3",
-    "express": "^4.18.1"
   }
 }
